# FedNSAM

./: .gitignore  README.md  colab.ipynb  dirichlet_data.py  fednsam.py  main_FedNSAM.py  plot_results.py  privacy.py  pyproject.toml  requirements.txt  sam.py
models/: __init__.py  cnn.py  resnet.py
results/: cifar100_compare.json  cifar10_compare_dp.json  cifar10_compare_para_dp.json  eminist_fensam.json
